# fa-cv

./: pyproject.toml  requirements.txt
src/: main.py
