[tool.poetry]
name = "fastapi-cv"
version = "0.1.0"
description = ""
authors = ["dariovp <dariovp01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
starlette = "^0.37.2"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
